--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Politique de Confidentialité</title>
-    <h1>1. </h1>
+    <h1><a href="motsrunique.html">Mots Runiques</a></h1>
 </head>
 <body>
 
