--- a/motsrunique.html
+++ b/motsrunique.html
@@ -2,10 +2,76 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Politique de Confidentialité Mots Runiques</title>
+    <title>Politique de Confidentialité: Mots Runiques</title>
 </head>
 <body>
-<h1>Politique de Confidentialité Mots Runiques</h1>
+    <div>
+
+        <h1>Politique de Confidentialité de Mots Runiques</h1>
+        <div>
+            <h2></h2>
+            <p></p>
+            <h2>A. Introduction</h2>
+            <p>Cette politique détaille ce que nous faisons de vos informations personnelles.</p>
+
+            <h2>B. Collecte d’informations personnelles</h2>
+            <p>L'application ne collecte aucune donnée à votre insu, néanmoins certaines informations qui pourraient nous être fournies via un tiers seraient susceptibles d'être collectés, stockés et utilisés.</p>
+            <ul>
+                <li>Des informations contenues dans toutes les communications que vous nous envoyez par e-mail ou sur notre site web, y compris leurs contenus et leurs métadonnées.</li>
+                <li>Toute autre information personnelle que vous nous communiquez.</li>
+            </ul>
+            <p>Avant de nous divulguer des informations personnelles concernant une autre personne, vous devez obtenir le consentement de ladite personne en ce qui concerne la divulgation et le traitement de ces informations personnelles selon les termes de cette politique.</p>
+
+            <h2>C. Utilisation de vos informations personnelles</h2>
+            <p>Toute utilisation de vos données est dans le but d'améliorer les services que propose l'application.</p>
+            <p> Toute autre utilisation sera faite de manière explicite au sein de cette section.</p>
+
+            <h2>D. Divulgation de vos informations personnelles</h2>
+            <p>Nous pouvons divulguer vos informations personnelles:</p>
+            <ul>
+                <li>Dans la mesure où nous sommes tenus de le faire par la loi.</li>
+                <li>Dans le cadre de toute procédure judiciaire en cours ou à venir.</li>
+                <li>Pour établir, exercer ou défendre nos droits légaux (y compris fournir des informations à d’autres à des fins de prévention des fraudes et de réduction des risques de crédit).</li>
+                <li>À l’acheteur (ou acheteur potentiel) de toute entreprise ou actif en notre possession que nous souhaitons (ou envisageons de) vendre.</li>
+                <li>À toute personne que nous estimons raisonnablement faire partie intégrante d’un tribunal ou autre autorité compétente pour la divulgation de ces informations personnelles si, selon notre opinion, un tel tribunal ou une telle autorité serait susceptible de demander la divulgation de ces informations personnelles.</li>
+            </ul>
+            <p>Sauf disposition contraire de la présente politique, nous ne transmettrons pas vos informations personnelles à des tierces parties.</p>
+
+            <h2>E. Transferts internationaux de données</h2>
+            <p>Les informations que nous collectons peuvent être stockées, traitées et transférées dans tous les pays dans lesquels nous opérons, afin de nous permettre d’utiliser les informations en accord avec cette politique.</p>
+
+            <h2>F. Conservation de vos informations personnelles</h2>
+            <p>Cette Section détaille nos politiques de conservation des données et nos procédures, conçues pour nous aider à nous conformer à nos obligations légales concernant la conservation et la suppression d’informations personnelles.</p>
+            <ul>
+                <li>1. Les informations personnelles que nous traitons à quelque fin que ce soit ne sont pas conservées plus longtemps que nécessaire à cette fin ou à ces fins.</li>
+                <li>Sans préjudice à l’article cité ci-dessus, nous supprimerons généralement les données personnelles au bout de 6 mois.</li>
+            </ul>
+
+            <h2>G. Sécurité de vos informations personnelles</h2>
+            <p>Nous prendrons des précautions techniques et organisationnelles raisonnables pour empêcher la perte, l’abus ou l’altération de vos informations personnelle.</p>
+            <p>Vous êtes responsable de la confidentialité des données que vous transmettez en référençant l'application ou le nom du propriétaire de l'application; nous ne vous demanderons des informations qu'en cas de nécessité, dans ce cas, l'unique expéditeur est : <a href="mailTo:snacksincplay@gmail.com">snacksincplay@gmail.com</a></p>
+
+            <h2>H. Amendements</h2>
+            <p>Nous pouvons parfois mettre cette politique à jour en publiant une nouvelle version. Vous devez vérifier cette page régulièrement pour vous assurer de prendre connaissance de tout changement effectué à cette politique.</p>
+
+            <h2>I. Vos droits</h2>
+            <p>Vous pouvez nous demander de vous fournir toute information personnelle que nous détenons sur vous, nous tâcherons de répondre dans les plus brefs délais.</p>
+            <p>Vous pourrez dès lors faire la demande pour effectuer une suppression de celles-ci.</p>
+
+            <h2>J. AdMob</h2>
+            <p>L'application contient une bannière de pub, qui contient des liens menant vers des sites web tiers et des informations les concernant. Nous n’avons aucun contrôle sur ces sites, et ne sommes pas responsables de leurs politiques de confidentialité ni de leurs pratiques.</p>
+            <p>Règles de confidentialité: <a href="https://support.google.com/admob/answer/6128543?hl=fr">AdMob</a></p>
+
+            <h2>K. Cookies</h2>
+            <p>Les cookies sont des fichiers contenant une petite quantité de données qui sont généralement utilisés comme identifiants uniques anonymes. Ils sont envoyés à votre navigateur à partir des sites web que vous visitez et sont stockés dans la mémoire interne de votre appareil.</p>
+            <p>l'application n'utilise pas explicitement ces "cookies". Toutefois, il est possible que l'application utilise du code et des bibliothèques de tiers qui utilisent des "cookies" pour collecter des informations et améliorer leurs services. Vous avez la possibilité d'accepter ou de refuser ces cookies et de savoir quand un cookie est envoyé à votre appareil. Si vous choisissez de refuser nos cookies, il se peut que vous ne puissiez pas utiliser certaines parties de l'application.</p>
+
+            <h2>M. Contact</h2>
+            <p>Pour toute informations concernant l'application ou la politique de confidentialité de celle-ci, veuillez contacter <a href="mailTo:snacksincplay@gmail.com">snacksincplay@gmail.com</a></p>
+
+        </div>
+
+    </div>
 <h2></h2>
 </body>
 </html>
