--- a/motsrunique.html
+++ b/motsrunique.html
@@ -66,7 +66,7 @@
             <p>Les cookies sont des fichiers contenant une petite quantité de données qui sont généralement utilisés comme identifiants uniques anonymes. Ils sont envoyés à votre navigateur à partir des sites web que vous visitez et sont stockés dans la mémoire interne de votre appareil.</p>
             <p>l'application n'utilise pas explicitement ces "cookies". Toutefois, il est possible que l'application utilise du code et des bibliothèques de tiers qui utilisent des "cookies" pour collecter des informations et améliorer leurs services. Vous avez la possibilité d'accepter ou de refuser ces cookies et de savoir quand un cookie est envoyé à votre appareil. Si vous choisissez de refuser nos cookies, il se peut que vous ne puissiez pas utiliser certaines parties de l'application.</p>
 
-            <h2>M. Contact</h2>
+            <h2>L. Contact</h2>
             <p>Pour toute informations concernant l'application ou la politique de confidentialité de celle-ci, veuillez contacter <a href="mailTo:snacksincplay@gmail.com">snacksincplay@gmail.com</a></p>
 
         </div>
