--- a/motsrunique.html
+++ b/motsrunique.html
@@ -24,7 +24,7 @@
 
             <h2>C. Utilisation de vos informations personnelles</h2>
             <p>Toute utilisation de vos données est dans le but d'améliorer les services que propose l'application.</p>
-            <p> Toute autre utilisation sera faite de manière explicite au sein de cette section.</p>
+            <p>Toute autre utilisation sera faite de manière explicite au sein de cette section.</p>
 
             <h2>D. Divulgation de vos informations personnelles</h2>
             <p>Nous pouvons divulguer vos informations personnelles:</p>
@@ -49,10 +49,12 @@
 
             <h2>G. Sécurité de vos informations personnelles</h2>
             <p>Nous prendrons des précautions techniques et organisationnelles raisonnables pour empêcher la perte, l’abus ou l’altération de vos informations personnelle.</p>
-            <p>Vous êtes responsable de la confidentialité des données que vous transmettez en référençant l'application ou le nom du propriétaire de l'application; nous ne vous demanderons des informations qu'en cas de nécessité, dans ce cas, l'unique expéditeur est : <a href="mailTo:snacksincplay@gmail.com">snacksincplay@gmail.com</a></p>
+            <p>Vous êtes responsable de la confidentialité des données que vous transmettez en référençant l'application ou le nom du propriétaire de l'application;</p>
+            <p>Nous ne vous demanderons des informations qu'en cas de nécessité, dans ce cas, l'unique expéditeur est : <a href="mailTo:snacksincplay@gmail.com">snacksincplay@gmail.com</a></p>
 
             <h2>H. Amendements</h2>
-            <p>Nous pouvons parfois mettre cette politique à jour en publiant une nouvelle version. Vous devez vérifier cette page régulièrement pour vous assurer de prendre connaissance de tout changement effectué à cette politique.</p>
+            <p>Nous pouvons parfois mettre cette politique à jour en publiant une nouvelle version.</p>
+            <p>Vous devez vérifier cette page régulièrement pour vous assurer de prendre connaissance de tout changement effectué à cette politique.</p>
 
             <h2>I. Vos droits</h2>
             <p>Vous pouvez nous demander de vous fournir toute information personnelle que nous détenons sur vous, nous tâcherons de répondre dans les plus brefs délais.</p>
