add target blank to admob link

--- a/motsrunique.html
+++ b/motsrunique.html
@@ -50,7 +50,7 @@
             <h2>G. Sécurité de vos informations personnelles</h2>
             <p>Nous prendrons des précautions techniques et organisationnelles raisonnables pour empêcher la perte, l’abus ou l’altération de vos informations personnelle.</p>
             <p>Vous êtes responsable de la confidentialité des données que vous transmettez en référençant l'application ou le nom du propriétaire de l'application;</p>
-            <p>Nous ne vous demanderons des informations qu'en cas de nécessité, dans ce cas, l'unique expéditeur est : <a href="mailTo:snacksincplay@gmail.com">snacksincplay@gmail.com</a></p>
+            <p>Nous ne vous demanderons des informations qu'en cas de nécessité, dans ce cas, l'unique expéditeur est : <a target="_blank" href="mailTo:snacksincplay@gmail.com">snacksincplay@gmail.com</a></p>
 
             <h2>H. Amendements</h2>
             <p>Nous pouvons parfois mettre cette politique à jour en publiant une nouvelle version.</p>
