--- a/motsrunique.html
+++ b/motsrunique.html
@@ -8,6 +8,7 @@
     <div>
 
         <h1>Politique de Confidentialité de Mots Runiques</h1>
+        <h4>date de mise a jour: 09/02/2022</h4>
         <div>
             <h2></h2>
             <p></p>
