--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Politique de Confidentialité</title>
-    <h1><a href="motsrunique.html">Mots Runiques</a></h1>
+    <title>Snacks_Inc: Page de developpeur</title>
+    <h1>Snacks_Inc: Page de developpeur</h1>
+    <h2>Présentation</h2>
+    <p>Bonjour et bienvenue sur la page de developpeur de <a target="_blank" href="https://play.google.com/store/apps/developer?id=Snacks_Inc&gl=FR">Snacks_Inc</a> <br> c'est ici que vous trouverez les informations relatives aux services que nous fournissons</p>
+    <h2>Applications</h2>
+    <p>Dans cette rubrique vous trouverez les différentes informations en rapport avec les applications développées par <a target="_blank" href="https://play.google.com/store/apps/developer?id=Snacks_Inc&gl=FR">Snacks_Inc</a></p>
+    <h3>Mots Runiques</h3>
+    <p>Application d'aide pour le jeu Diablo 2 / Diablo 2: Resurrected permettant de rechercher efficacement les mots runiques</p>
+    <h4><a target="_blank" href="https://www.facebook.com/MotsRuniques">Page Facebook</a></h4>
+    <h4><a target="_blank" href="https://play.google.com/store/apps/details?id=bbruart.d2runewords&gl=FR">Page Google Play Store</a></h4>
+    <h4><a href="motsrunique.html">Politique de confidentialité</a></h4>
+
+    <h2>Google Ads informations</h2>
+    <h6><a target="_blank" href="app-ads.txt">app-ads.txt</a></h6>
 </head>
 <body>
 
