--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Snacks_Inc: Page de developpeur</title>
     <h1>Snacks_Inc: Page de developpeur</h1>
     <h2>Présentation</h2>
-    <p>Bonjour et bienvenue sur la page de developpeur de <a target="_blank" href="https://play.google.com/store/apps/developer?id=Snacks_Inc&gl=FR">Snacks_Inc</a> <br> c'est ici que vous trouverez les informations relatives aux services que nous fournissons</p>
+    <p>Bienvenue sur la page de developpeur de <a target="_blank" href="https://play.google.com/store/apps/developer?id=Snacks_Inc&gl=FR">Snacks_Inc</a> <br> c'est ici que vous trouverez les informations relatives aux services que nous fournissons.</p>
     <h2>Applications</h2>
     <p>Dans cette rubrique vous trouverez les différentes informations en rapport avec les applications développées par <a target="_blank" href="https://play.google.com/store/apps/developer?id=Snacks_Inc&gl=FR">Snacks_Inc</a></p>
     <h3>Mots Runiques</h3>
@@ -15,7 +15,7 @@
     <h4><a href="motsrunique.html">Politique de confidentialité</a></h4>
 
     <h2>Google Ads informations</h2>
-    <h6><a target="_blank" href="app-ads.txt">app-ads.txt</a></h6>
+    <h3><a target="_blank" href="app-ads.txt">app-ads.txt</a></h3>
 </head>
 <body>
 
