--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
     <h4><a target="_blank" href="https://play.google.com/store/apps/details?id=bbruart.d2runewords&gl=FR">Page Google Play Store</a></h4>
     <h4><a href="motsrunique.html">Politique de confidentialité</a></h4>
 
-    <h2>Google Ads informations</h2>
-    <h3><a target="_blank" href="app-ads.txt">app-ads.txt</a></h3>
+    <h3>MEGAPROUT</h3>
+    <p>Application divertissement, un bouton, une multitude de pets, qu'attendez vous pour appuyer?</p>
+    <h4><a target="_blank" href="">Page Google Play Store</a></h4>
+    <h4><a href="megaprout.html">Politique de confidentialité</a></h4>
+
+    <h5>Google Ads informations</h5>
+    <h6><a target="_blank" href="app-ads.txt">app-ads.txt</a></h6>
 </head>
 <body>
 
