--- a/megaprout.html
+++ b/megaprout.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div>
-
+<a href="index.html"><- back</a>
     <h1>Politique de Confidentialité de MEGAPROUT</h1>
     <h4>date de mise a jour: 19/04/2022</h4>
     <div>
