--- a/motsrunique.html
+++ b/motsrunique.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-
+        <a href="index.html"><- back</a>
         <h1>Politique de Confidentialité de Mots Runiques</h1>
         <h4>date de mise a jour: 09/02/2022</h4>
         <div>
