--- a/megaprout.html
+++ b/megaprout.html
@@ -69,9 +69,11 @@
         <p>Les cookies sont des fichiers contenant une petite quantité de données qui sont généralement utilisés comme identifiants uniques anonymes. Ils sont envoyés à votre navigateur à partir des sites web que vous visitez et sont stockés dans la mémoire interne de votre appareil.</p>
         <p>l'application n'utilise pas explicitement ces "cookies". Toutefois, il est possible que l'application utilise du code et des bibliothèques de tiers qui utilisent des "cookies" pour collecter des informations et améliorer leurs services. Vous avez la possibilité d'accepter ou de refuser ces cookies et de savoir quand un cookie est envoyé à votre appareil. Si vous choisissez de refuser nos cookies, il se peut que vous ne puissiez pas utiliser certaines parties de l'application.</p>
 
-        <h2>L. DISCLAIMER</h2>
-        <p>* Cette application est une app non officielle, et n'est en aucun cas affiliée à une compagnie ayant un quelconque rapport avec Blizzard Entertainment ou ses sous-traitants.</p>
-        <p>Toutes les images sont des créations personnelles ou sont libres de droit.</p>
+        <h2>L. Références</h2>
+        <p>Le jingle de lancement de l'application est libre de droit</p>
+        <p>il a été trouvé sur le lien suivant : <a href='https://freesound.org/people/johntrap/sounds/610513/' > Johntrap - Freesound.org</a></p>
+        <p>Les autres sources de bruit de pets ont été récupérées via divers site de son libre de droits.</p>
+        <p>Certains prouts viennent de la contribution de mon entourage, ce qui en fait une application unique!</p>
 
         <h2>M. Contact</h2>
         <p>Pour toute informations concernant l'application ou la politique de confidentialité de celle-ci, veuillez contacter <a href="mailTo:snacksincplay@gmail.com">snacksincplay@gmail.com</a></p>
