--- a/megaprout.html
+++ b/megaprout.html
@@ -73,6 +73,12 @@
         <p>Le jingle de lancement de l'application est libre de droit</p>
         <p>il a été trouvé sur le lien suivant : <a href='https://freesound.org/people/johntrap/sounds/610513/' > Johntrap - Freesound.org</a></p>
         <p>Les autres sources de bruit de pets ont été récupérées via divers site de son libre de droits.</p>
+        <p>Concernant les images utilisées pour les banières et images de présentation proviennent de:</p>
+        <ul>
+            <li>le bras de dieu: découpe du bras dans l'oeuvre: la création d'adam : <a target="_blank" href="https://www.pngaaa.com/detail/3987390">lien vers l'image</a></li>
+            <li>le bras gauche: une image libre de droit provenant de <a target="_blank" href="https://www.pexels.com/photo/person-holding-black-smartphone-in-orange-background-3756877/"  >Pexels.com</a></li>
+            <li>les emojis: images libre de droit provenant de <a target="_blank"  href="https://www.freepng.fr/">freepng.fr</a></li>
+        </ul>
         <p>Certains prouts viennent de la contribution de mon entourage, ce qui en fait une application unique!</p>
 
         <h2>M. Contact</h2>
@@ -81,7 +87,6 @@
     </div>
 
 </div>
-<h2></h2>
 </body>
 </html>
 </title>
