--- a/megaprout.html
+++ b/megaprout.html
@@ -70,6 +70,7 @@
         <p>l'application n'utilise pas explicitement ces "cookies". Toutefois, il est possible que l'application utilise du code et des bibliothèques de tiers qui utilisent des "cookies" pour collecter des informations et améliorer leurs services. Vous avez la possibilité d'accepter ou de refuser ces cookies et de savoir quand un cookie est envoyé à votre appareil. Si vous choisissez de refuser nos cookies, il se peut que vous ne puissiez pas utiliser certaines parties de l'application.</p>
 
         <h2>L. Références</h2>
+        <p>La police d'écriture du titre est libre de droit, il s'agit de la font chlorinap, celle utilisée pour les textes est aussi libre de droit (gochi hand)</p>
         <p>Le jingle de lancement de l'application est libre de droit</p>
         <p>il a été trouvé sur le lien suivant : <a href='https://freesound.org/people/johntrap/sounds/610513/' > Johntrap - Freesound.org</a></p>
         <p>Les autres sources de bruit de pets ont été récupérées via divers site de son libre de droits.</p>
