--- a/motsrunique.html
+++ b/motsrunique.html
@@ -70,6 +70,7 @@
             <p>l'application n'utilise pas explicitement ces "cookies". Toutefois, il est possible que l'application utilise du code et des bibliothèques de tiers qui utilisent des "cookies" pour collecter des informations et améliorer leurs services. Vous avez la possibilité d'accepter ou de refuser ces cookies et de savoir quand un cookie est envoyé à votre appareil. Si vous choisissez de refuser nos cookies, il se peut que vous ne puissiez pas utiliser certaines parties de l'application.</p>
 
             <h2>L. Références</h2>
+            <p>La police d'écriture est libre de droit, il s'agit de la font Exocet</p>
             <p>Les icones sont libres de droit et proviennent de <a target="_blank" href="https://www.flaticon.com/">FlatIcon.com</a></p>
             <p>les informations récoltées proviennent du site officiel, notre expérience en jeu et complêté par divers sites.</p>
 
