feat: update security policy

--- a/megaprout.html
+++ b/megaprout.html
@@ -8,7 +8,7 @@
 <div>
 <a href="index.html"><- back</a>
     <h1>Politique de Confidentialité de MEGAPROUT</h1>
-    <h4>date de mise a jour: 19/04/2022</h4>
+    <h4>date de mise a jour: 23/06/2023</h4>
     <div>
         <h2></h2>
         <p></p>
@@ -45,13 +45,26 @@
         <p>Cette Section détaille nos politiques de conservation des données et nos procédures, conçues pour nous aider à nous conformer à nos obligations légales concernant la conservation et la suppression d’informations personnelles.</p>
         <ul>
             <li>1. Les informations personnelles que nous traitons à quelque fin que ce soit ne sont pas conservées plus longtemps que nécessaire à cette fin ou à ces fins.</li>
-            <li>Sans préjudice à l’article cité ci-dessus, nous supprimerons généralement les données personnelles au bout de 6 mois.</li>
+            <li>2. Sans préjudice à l’article cité ci-dessus, nous supprimerons généralement les données personnelles au bout de 6 mois.</li>
         </ul>
 
         <h2>G. Sécurité de vos informations personnelles</h2>
-        <p>Nous prendrons des précautions techniques et organisationnelles raisonnables pour empêcher la perte, l’abus ou l’altération de vos informations personnelle.</p>
-        <p>Vous êtes responsable de la confidentialité des données que vous transmettez en référençant l'application ou le nom du propriétaire de l'application;</p>
-        <p>Nous ne vous demanderons des informations qu'en cas de nécessité, dans ce cas, l'unique expéditeur est : <a target="_blank" href="mailTo:snacksincplay@gmail.com">snacksincplay@gmail.com</a></p>
+        <p>Cette politique de confidentialité décrit comment notre application mobile collecte, utilise, stocke et partage les données personnelles des utilisateurs lors de l'utilisation de nos services, y compris l'intégration des services publicitaires d'AdMob. Nous accordons une grande importance à la confidentialité de vos informations et nous nous engageons à les protéger conformément aux lois et réglementations applicables. Veuillez lire attentivement cette politique pour comprendre comment nous traitons vos données personnelles.</p>
+
+        <h3>1. Collecte des données</h3>
+        <p>1.1 Données fournies par l'utilisateur : Lorsque vous utilisez notre application mobile, nous pouvons collecter certaines données personnelles que vous nous fournissez volontairement, telles que votre nom, votre adresse e-mail ou d'autres informations de contact. Nous ne collecterons ces informations que si vous choisissez de les partager avec nous.</p>
+        <p>1.2 Données automatiquement collectées : Lors de l'utilisation de notre application, nous pouvons également collecter automatiquement certaines informations techniques et non personnelles, telles que l'adresse IP de votre appareil, la version du système d'exploitation, les données de localisation approximative, et d'autres informations similaires.</p>
+        <p>1.3 Cookies et technologies similaires : Nous utilisons des cookies et d'autres technologies similaires pour collecter des informations supplémentaires sur votre utilisation de l'application. Les cookies sont de petits fichiers texte qui sont stockés sur votre appareil lorsque vous visitez notre application. Ces cookies nous aident à personnaliser votre expérience, à analyser les tendances d'utilisation et à collecter des informations démographiques sur nos utilisateurs de manière globale.</p>
+
+        <h3>2. Utilisation des données</h3>
+        <h4>Nous utilisons les données collectées aux fins suivantes :</h4>
+        <p>2.1 Fourniture et amélioration des services : Nous utilisons les données pour fournir et améliorer nos services, notamment pour personnaliser votre expérience utilisateur, vous envoyer des notifications relatives à l'application, répondre à vos demandes d'assistance et analyser l'utilisation de l'application.</p>
+        <p>2.2 Publicité : Nous pouvons afficher des publicités dans notre application en utilisant les services d'AdMob. AdMob collecte des données pour vous fournir des publicités personnalisées en fonction de vos préférences et de votre utilisation de l'application. Veuillez consulter la politique de confidentialité d'AdMob pour en savoir plus sur la manière dont ils traitent vos données.</p>
+        <p>2.3 Communication : Nous pouvons utiliser vos données pour vous envoyer des communications relatives à notre application, telles que des mises à jour, des annonces et des informations sur de nouveaux produits ou services. Vous pouvez choisir de ne plus recevoir ces communications en suivant les instructions de désinscription fournies dans ces communications</p>
+
+        <h3>3. Partage des données</h3>
+        <h4>Nous ne vendons, ne louons ni ne partageons vos données personnelles avec des tiers, sauf dans les circonstances suivantes :</h4>
+        <p>Prestataires de services : Nous pouvons partager vos données avec des prestataires de services tiers qui travaillent en notre nom pour faciliter et améliorer nos services, y compris les fournisseurs d'hébergement, les services d'analyse, les services de messagerie, etc. Ces tiers n'ont accès à vos données personnelles que pour exécuter ces tâches en notre nom et sont tenus de les traiter</p>
 
         <h2>H. Amendements</h2>
         <p>Nous pouvons parfois mettre cette politique à jour en publiant une nouvelle version.</p>
